<resources>
    <string name="app_name">OnlineTV Demo</string>
    <string name="app_caption">OnTV: OnlineTV App</string>
    <string name="schedule_header">TV Guide</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home_latest">Latest Channel</string>
    <string name="home_category_list">Category List</string>
    <string name="view_more">View All</string>
    <string name="no_item_found">No Item Found</string>
    <string name="overview">Overview :-</string>
    <string name="rating">Rating</string>
    <string name="thank_rating">Thanks for Rating</string>
    <string name="submit">Submit</string>
    <string name="report_channel">Report Channel</string>
    <string name="report_channel_view">Report Channel :-</string>
    <string name="report_issue">Enter your issue here</string>
    <string name="related_channel">Related Channel :-</string>
    <string name="comments">Comments :-</string>
    <string name="leave_comment">Leave your comments</string>

    <string name="name">Name</string>

    <string name="conne_msg1">No Network Connection!!!</string>
    <string name="loading">Loading</string>

    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_about">About Us</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_search">Search</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_live_tv">Live TV</string>
    <string name="menu_video">Videos</string>
    <string name="menu_schedule">Schedule</string>
    <string name="view_schedule">View Full TV Guide</string>
    <string name="menu_featured">Featured</string>
    <string name="menu_setting">Settings</string>

    <string name="share_msg">Hi,I would like to share Application which is used to watch live tv free please download it from Google Play Store Free Here \n https://play.google.com/store/apps/details?id=</string>

    <string name="favourite_add">Favourite has been saved</string>
    <string name="favourite_remove">Favourite has been removed</string>
    <!--intro screen-->
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="intro_1_title">Show Off</string>
    <string name="intro_1_desc">Display Channel based on Category , Latest and Featured also play in External Player as well</string>
    <string name="intro_2_title">Chromecast Channel </string>
    <string name="intro_2_desc">Play Channel in TV using Google Cast</string>
    <string name="intro_3_title">Youtube Video</string>
    <string name="intro_3_desc">Play Youtube Video as well as Live Youtube Video</string>
    <string name="error_video">There was an error playing the video</string>

    <string name="casty_introduction_text">Use this button to connect with Chromecast</string>

    <string name="signup">Sign up</string>
    <string name="login">Login</string>

    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember">Remember Me</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="already_account_sign_in">Already have an account Yet?</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="login_msg">You need to login first</string>
    <string name="privacy_url">http://apptific.com/PlayStore/Privacy-Policy.html</string>
    <!-- if you want to RTL then put it true other wise it false-->
    <string name="isRTL">false</string>

    <string name="tag_line">Watch Live TV</string>
    <string name="notification">Notification Settings</string>
    <string name="play_in_external">Play Channel In External Player</string>

    <!-- Premium channels -->
    <string name="premium_prompt">You need a subscription to view this channel</string>
    <string name="buy_plan">Buy Plan</string>
    <string name="buy_plan_format">You need a NGN %s.00 subscription to view this channel</string>

    <!-- youtube api key -->
    <string name="youtube_api_key">AIzaSyAYJwy6nzCFqgr5LtihRI3YuVBb_34aprw</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="cast_youtube">Youtube Video direct does not cast</string>

    <!--external player -->
    <string name="select_player">Select Player</string>
    <string name="mx_player">MX Player</string>
    <string name="vlc_player">VLC Player</string>
    <string name="xmtv_player">XMTV Player</string>
    <string name="download_msg">%s is not installed. Click the button below to download it or choose the some other player</string>
    <string name="important">Important</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="xmtv_download_link">http://download.xmtvplayer.com:8080/apk/xmtvplayer2018.apk</string>

    <string name="text_no_item">No item available.</string>
    <string name="back_twice">Please click BACK again to exit</string>
    <string name="default_notification_channel_id">AndroidLiveTV</string>
    <string name="option_menu_overflow">&#8942;</string>
    <string name="option_add_favourite">Add to Favourite</string>
    <string name="option_remove_favourite">Remove from Favourite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required_field_text">Required</string>
    <string name="cancel_text">Cancel</string>
    <string name="close_text">Close</string>
    <string name="save_text">Save</string>


</resources>
