<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_eighty"
            android:orientation="vertical"
            android:padding="15dp">


            <!--<ImageView-->
                <!--android:id="@+id/imageView2"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:contentDescription="@string/app_name"-->
                <!--android:src="@drawable/intro_logo" />-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_email" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/circle_normal"

                    />

            </LinearLayout>

            <include layout="@layout/row_cross_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_password" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/circle_normal"

                    />

            </LinearLayout>

            <include layout="@layout/row_cross_line" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/remember"
                android:textColor="@color/white"
                android:theme="@style/YellowCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_sign_up"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/d_twenty"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="@string/register"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button_login"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/d_twenty"
                    android:text="@string/login"
                    android:textColor="@color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/button_forgot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>