<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <include
                layout="@layout/row_channel_item"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:singleLine="true"
                android:text="@string/report_channel_view"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="35dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent" />

            <EditText
                android:id="@+id/editIssue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_rounded_button"
                android:ems="10"
                android:hint="@string/report_issue"
                android:inputType="textMultiLine"
                android:lines="4"
                android:padding="5dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/submit"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>