<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lyt_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_no_item"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_item_found"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/fragment_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/d_ten">


                <TextView
                    android:id="@+id/txt_latest_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_ten"
                    android:layout_alignParentStart="true"
                    android:text="@string/home_latest"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <View
                    android:layout_width="35dp"
                    android:layout_height="2dp"
                    android:layout_below="@+id/txt_latest_home"
                    android:layout_marginTop="5dp"
                    android:background="@color/yellow_line" />

                <Button
                    android:id="@+id/btn_latest"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/d_forty"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="3dp"
                    android:paddingStart="@dimen/d_twenty"
                    android:paddingEnd="@dimen/d_twenty"
                    android:text="@string/view_more"
                    android:textAllCaps="false"
                    android:textColor="@color/view_all_color" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_latest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />


            <RelativeLayout
                android:id="@+id/lyt_recent_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/d_ten">


                <TextView
                    android:id="@+id/txt_category_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_ten"
                    android:layout_alignParentStart="true"
                    android:text="@string/home_category_list"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <View
                    android:layout_width="35dp"
                    android:layout_height="2dp"
                    android:layout_below="@+id/txt_category_home"
                    android:layout_marginTop="5dp"
                    android:background="@color/yellow_line" />

                <Button
                    android:id="@+id/btn_category"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="3dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/view_more"
                    android:textAllCaps="false"
                    android:textColor="@color/view_all_color" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>