<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_eighty"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_user" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/circle_normal" />

            </LinearLayout>

            <include layout="@layout/row_cross_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_email" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/circle_normal"

                    />

            </LinearLayout>

            <include layout="@layout/row_cross_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_password" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/circle_normal"

                    />

            </LinearLayout>

            <include layout="@layout/row_cross_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_phone" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/circle_normal"

                    />

            </LinearLayout>

            <include layout="@layout/row_cross_line" />


            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/d_twenty"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>